--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,8 @@ services:
             - consul
         ports:
             - 0.0.0.0:8500:8500
-            - 192.168.0.6:53:53
+            - 0.0.0.0:53:53
+            - 0.0.0.0:53:53/udp
         volumes:
             - ./Consul/Server/Consul/server.json:/etc/consul/server.json
         restart: always
